--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Roboto Mono', monospace;
-    
+    padding:15px;
+    margin: 0px;
 }
 
 main {
@@ -24,31 +25,22 @@ header {
     width: 50px;
 }
 
-#enter_text, #output_text {
-    background: transparent;
-    border: none;
-    resize: none;
-    height: 250px;
-    width: 300px;
-    font-size: 20px;
-    margin: 5px;
-}
-
-.text_input, .results {
+.text_input_section, .results_section {
     padding: 15px;
     display: flex;
     flex-direction: column;  
     align-items: center;
     justify-content: center;
-  
-
 }
-.buttons {
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    justify-content: center;
 
+#enter_text, #output_text {
+    background: transparent;
+    border: none;
+    resize: none;
+    margin: 5px;
+    height: 250px;
+    width: 600px;
+    font-size: 20px;
 }
 
 #btn_encrypt {
@@ -69,4 +61,88 @@ header {
     height: 50px;
     margin: 5px 10px;
     text-shadow: 1px 1px 2px black;
+}
+
+.buttons_section {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    justify-content: center;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #249670;
+    color: white;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+#btn_copy {
+    background-color: #cac7c7;
+    color: #249670;
+    border: solid black 2px;
+    border-radius: 5px;
+    height: 35px;
+    margin: 5px 10px;
+    padding: 3px;
+    width: 25%;
+    font-weight: 900;    
+    transition-duration: 1s;
+}
+
+#modal_copy {
+    color:#249670;
+    font-weight: bold;
+    font-size: small; 
+    margin:2px;
+    transition-duration: 500ms;
+}
+
+.media {
+    display:flex;
+    justify-content: center ;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+a:link{
+    color: white;
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
+    text-decoration: none;
+}
+
+.media > li {
+    margin: 10px;
+}
+
+.show {
+    opacity: 1;
+}
+
+.hide {
+    opacity: 0;
+}
+
+@media only screen and (max-width: 600px) {
+
+body {
+    padding:3px;
+}
+
+#enter_text, #output_text {
+    height: 250px;
+    width: 300px;
+    font-size: 20px;
+    
+}
+
+
 }
