--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@ footer {
     color: white;
     margin: 5px;
     border-radius: 5px;
+    text-align: center;
+    padding: 5px;
 }
 
 #btn_copy {
